# panda_controllers

./: .gitignore  CMakeLists.txt  README.md  package.xml  panda_controllers_plugin.xml
cfg/: compliance_param.cfg  desired_mass_param.cfg
config/: adaptive_throw.yaml  command_publisher.yaml  franka_par_REG.yaml  frankawrist_inertial_REG.yaml  homing.yaml  inertial_DH.yaml  inertial_DH_DYN.yaml  inertial_DH_REG.yaml  inertial_DH_REG_p10.yaml  inertial_DH_REG_p2.yaml  inertial_DH_REG_p20.yaml  inertial_DH_REG_p30.yaml  inertial_DH_REG_p40.yaml  inertial_DH_REG_p5.yaml  inertial_DH_REG_p50.yaml  lissajous_param.yaml  menu.yaml  panda_controllers.yaml  panda_controllers_default.yaml  panda_controllers_sim.yaml  panda_inertial_parameters.yaml  panda_trajectory.yaml  rqt_multiplot_force_error_franka_vic.xml  rqt_multiplot_isic_planner.xml  rqt_multiplot_vic_planner.xml  topic_command.txt  trajectory.yaml  trajectory_oo.yaml  trajectory_param.yaml  visual_rviz.rviz
config/inertial/: franka_inertial_DYN.yaml  franka_inertial_REG.yaml  franka_inertial_REG_pW.yaml  inertial_DH_REG.yaml  inertial_DH_REG_7l.yaml  inertial_DH_REG_p10.yaml  inertial_DH_REG_p2.yaml  inertial_DH_REG_p20.yaml  inertial_DH_REG_p5.yaml  inertial_DH_REG_pW.yaml
config/thunder/: franka.yaml  franka_par_REG.yaml  franka_par_REG_pW.yaml
generate_regressor/: FrameOffset.cpp  RegBasic.h  SLregressor.cpp  SLregressor.h  generateCode.cpp
generate_regressor/ThunderGen/: ThunderPanda.cpp  ThunderPanda.h  gen_regr_fun.cpp  gen_regr_fun.h  main.cpp  makefile
generate_regressor/lib/: FrameOffset.h  RegBasic.cpp  RegBasic.h  SLregressor.cpp  SLregressor.h  main_genCode  main_genCode.cpp  makefile
include/: backstepping.h  franka_gen.h  gen_traj_fun.h  thunder_franka.h  utils_cartesian.h  utils_param.h
include/panda_controllers/: .backstepping.h.kate-swp  CT_mod_OS.h  SLregressor.h  backstepping.h  cartesian_impedance_controller_softbots.h  cartesian_velocity_controller.h  command_publisher.h  computed_torque.h  computed_torque_adaptive.h  computed_torque_backup.h  computed_torque_bis.h  computed_torque_mod.h  computed_torque_old.h  impedance_controller.h  joint_position_controller.h  myLibReg.h  pdcontroller.h  planner.h  planner_mk2.h  project_controller_matlab.h  project_impedance_controller.h  project_impedance_controller_pos.h  project_impedance_controller_quat.h  trajectory_oo.h  variable_impedance_controller.h
include/utils/: FrameOffset.h  FrictionTorque.h  Jacobians.h  Jacobians_ee.h  RegBasic.h  SLregressor.h  ThunderPanda.h  frameLib.h  frankawrist_gen.h  frankino_gen.h  gen_regr_fun.h  get_CoriolisMatrix.h  get_CoriolisMatrix_types.h  get_Ja_dot.h  min_jerk.h  myLibReg.h  panda_2_gen.h  parsing_utilities.h  rtwtypes_proj.h  thunder_franka.h  thunder_frankawrist.h  thunder_frankino.h  thunder_panda_2.h  utils_param.h
launch/: Command_Publisher.launch  adaptiveFlag.launch  adaptive_throw.launch  backstepping_controller.launch  cartesian_impedance_controller_softbots.launch  cartesian_velocity_controller.launch  clik_node.launch  command.launch  computed_torque_adaptive_controller.launch  computed_torque_controller.launch  homing.launch  joint_position_controller.launch  launchPandaAngeliNanni.launch  lissajous.launch  menu.launch  menu_acados.launch  panda.launch  panda_command.launch  panda_controller.launch  panda_controllers_sim.launch  panda_controllers_sim3.launch  panda_isic_gripper.launch  panda_planner.launch  panda_project.launch  panda_rviz.launch  panda_trajectory_rviz.launch  panda_vic_gripper.launch  project_controller.launch  project_controller_quaternion.launch  prova.launch  robot.launch  rosbag.launch  rosbag_BS.launch  rosbag_CT.launch  rosbag_throw.launch  soft_claw.launch  softhand1.launch  softhand1launch.launch  trajectory_cmd.launch  trajectory_oo_cmd.launch  (+2 more)
launch/gazebo/: panda.launch  robot.launch
launch/rviz/: franka_marker.rviz  panda_trajectory_rviz.launch
msg/: CommandParams.msg  Commands.msg  DesiredImpedance.msg  DesiredProjectTrajectory.msg  DesiredTrajectory.msg  EEpose.msg  ExternalForces.msg  InfoDebug.msg  InfoPlanner.msg  InputsFromMatlab.msg  OutputsToMatlab.msg  RobotState.msg  Vec7D.msg  cubeEq_Preset.msg  cubeRef.msg  desTrajEE.msg  flag.msg  impedanceGain.msg  link_params.msg  log_adaptive_cartesian.msg  log_adaptive_joints.msg  log_backstepping.msg  point.msg  rpy.msg  udata.msg
rosbag/: subset.bag
scripts/: build_frankino_solver.py  gripper_control.py  qb_softclaw_control.py  qb_softclaw_qbadmin.py
src/: .pdcontroller.cpp.kate-swp  CLIK_node.cpp  CT_mod_OS._fake.cpp  CT_mod_OS.cpp  FrameOffset.cpp  FrictionTorque.cpp  Jacobians.cpp  Jacobians_ee.cpp  RegBasic.cpp  SLregressor.cpp  ThunderPanda.cpp  adaptiveFlag_node.cpp  adaptive_throw.cpp  adaptive_throw_fake.cpp  backstepping.cpp  cartesian_impedance_controller_softbots.cpp  cartesian_velocity_controller.cpp  closeHand.cpp  close_hand_node.cpp  com_joints_sin.cpp  command_cartesian.cpp  command_desEE.cpp  command_desEE.cpp.old  command_joints.cpp  command_node.cpp  command_opt.cpp  command_publisher.cpp  commands.cpp  computed_torque.cpp  computed_torque_adaptive.cpp  computed_torque_bis.cpp  computed_torque_mod.cpp  computed_torque_old.cpp  controller_publisher.cpp  filter.cpp  frameLib.cpp  gen_regr_fun.cpp  gen_traj_fun.cpp  get_Ja_dot.cpp  impedance_controller.cpp  (+30 more)
src/panda_controllers/: CMakeLists.txt  LICENSE
utils_adaptive/: README.md  README.txt
utils_adaptive/chrono_test/: ThunderPanda.cpp  ThunderPanda.h  main_Chrono.cpp  makefile
utils_adaptive/genThunder/: main_Generator  main_Generator.cpp  main_Thunder  main_Thunder.cpp  main_Thunder_test.cpp  makefile
utils_adaptive/genYAML/: main_YAML  main_YAML.cpp  makefile
utils_adaptive/generatedFiles/: ThunderPanda.cpp  ThunderPanda.h  gen_regr_fun.cpp  gen_regr_fun.h  inertial_DH.yaml  inertial_DH_DYN.yaml  inertial_DH_REG.yaml  inertial_DH_REG_p10.yaml  inertial_DH_REG_p2.yaml  inertial_DH_REG_p20.yaml  inertial_DH_REG_p30.yaml  inertial_DH_REG_p40.yaml  inertial_DH_REG_p5.yaml  inertial_DH_REG_p50.yaml  (+2 more)
worlds/: palla.world
(+44 files in other folders)
