<?xml version="1.0"?>
<package format="2">
	<name>panda_controllers</name>
	<version>1.0.0</version>
	<description>panda_controllers provides some ROS controllers for using Franka Emika Panda robots with ros_control</description>
	<maintainer email="georgejose.pollayil@phd.unipi.it">George Jose Pollayil</maintainer>
	<license>Apache 2.0</license>

	<url type="repository">https://github.com/CentroEPiaggio/panda_controllers</url>
	<url type="bugtracker">https://github.com/CentroEPiaggio/panda_controllers/issues</url>
	<author>George Jose Pollayil</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>eigen</build_depend>

	<build_export_depend>message_runtime</build_export_depend>

	<depend>controller_interface</depend>
	<depend>dynamic_reconfigure</depend>
	<depend>franka_hw</depend>
	<depend>geometry_msgs</depend>
	<depend>franka_msgs</depend>
	<depend>hardware_interface</depend>
	<depend>libfranka</depend>
	<depend>pluginlib</depend>
	<depend>realtime_tools</depend>
	<depend>roscpp</depend>

	<exec_depend>franka_control</exec_depend>
	<exec_depend>franka_description</exec_depend>
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>panda_moveit_config</exec_depend>
	<exec_depend>rospy</exec_depend>

	<export>
		<controller_interface plugin="${prefix}/panda_controllers_plugin.xml"/>
	</export>
</package>